[gd_scene load_steps=8 format=3 uid="uid://4yacseumv0ih"]

[ext_resource type="Texture2D" uid="uid://cont5y00isaah" path="res://assets/button_icon/Clen booton/C_LeftArrow1.png" id="1_lpubu"]
[ext_resource type="Script" uid="uid://b3n8e2vq5brs3" path="res://scripts/controls.gd" id="1_lt2xq"]
[ext_resource type="Texture2D" uid="uid://0cq5ew8a4i14" path="res://assets/button_icon/Clen boton pressed/CP_LeftArrow1.png" id="2_lt2xq"]
[ext_resource type="Texture2D" uid="uid://bgonla5s2fp87" path="res://assets/button_icon/Clen booton/C_RightArrow1.png" id="3_1p5nq"]
[ext_resource type="Texture2D" uid="uid://n7luayy706wa" path="res://assets/button_icon/Clen boton pressed/CP_RightArrow1.png" id="4_hob4j"]
[ext_resource type="Texture2D" uid="uid://4n0ses4tiygi" path="res://assets/button_icon/Clen booton/C_Return2.png" id="5_01bab"]
[ext_resource type="Texture2D" uid="uid://t8185sa408tt" path="res://assets/button_icon/Clen boton pressed/CP_Return2.png" id="6_exs80"]

[node name="Control" type="Node2D"]
script = ExtResource("1_lt2xq")

[node name="Panel" type="CanvasLayer" parent="."]

[node name="left" type="TextureButton" parent="Panel"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 104.0
offset_top = -330.0
offset_right = 204.0
offset_bottom = -230.0
grow_vertical = 0
scale = Vector2(3, 3)
texture_normal = ExtResource("1_lpubu")
texture_pressed = ExtResource("2_lt2xq")

[node name="right" type="TextureButton" parent="Panel"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 418.0
offset_top = -330.0
offset_right = 518.0
offset_bottom = -230.0
grow_vertical = 0
scale = Vector2(3, 3)
texture_normal = ExtResource("3_1p5nq")
texture_pressed = ExtResource("4_hob4j")

[node name="jump" type="TextureButton" parent="Panel"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -540.0
offset_top = -330.0
offset_right = -440.0
offset_bottom = -230.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(3, 3)
texture_normal = ExtResource("5_01bab")
texture_pressed = ExtResource("6_exs80")

[connection signal="button_down" from="Panel/left" to="." method="_on_left_button_down"]
[connection signal="button_up" from="Panel/left" to="." method="_on_left_button_up"]
[connection signal="button_down" from="Panel/right" to="." method="_on_right_button_down"]
[connection signal="button_up" from="Panel/right" to="." method="_on_right_button_up"]
[connection signal="button_down" from="Panel/jump" to="." method="_on_jump_button_down"]
[connection signal="button_up" from="Panel/jump" to="." method="_on_jump_button_up"]
